@@ -337,7 +337,7 @@ For instance, in `solrconfig.xml`, the default auto soft commit settings are set
 [source,xml]
 ----
 <autoSoftCommit>
-  <maxTime>${solr.autoSoftCommit.maxTime:-1}</maxTime>
+  <maxTime>${solr.autoSoftCommit.maxTime:3000}</maxTime>
 </autoSoftCommit>
 ----
 
